<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/fundo_degrade"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical|center_horizontal"
    tools:context=".activity.CadastroUsuario">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="150dp"
            android:layout_height="113dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:background="@drawable/usuario"  />

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_below="@+id/imageLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:padding="10dp">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/usuario"
                android:textColor="@android:color/white"
                android:textSize="24sp"/>
            <EditText
                android:id="@+id/edit_nome_user"
                android:background="@drawable/fundo_caixa_texto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@android:color/white"
                android:hint="Digite o seu usuário"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear2"
            android:layout_below="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:padding="10dp">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:textColor="@android:color/white"
                android:textSize="24sp"/>
            <EditText
                android:id="@+id/edit_email"
                android:background="@drawable/fundo_caixa_texto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@android:color/white"
                android:hint="Digite o seu e-mail"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear3"
            android:layout_below="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:textColor="@android:color/white"
                android:layout_height="wrap_content"
                android:text="@string/telefone"
                android:textSize="24sp"/>
            <EditText
                android:id="@+id/edit_codArea"
                android:background="@drawable/fundo_caixa_texto"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@android:color/white"
                android:hint=" +55"/>
            <EditText
                android:id="@+id/edit_ddd"
                android:background="@drawable/fundo_caixa_texto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:textSize="24sp"
                android:textColor="@android:color/white"
                android:hint="(11) "/>
            <EditText
                android:id="@+id/edit_telefone"
                android:background="@drawable/fundo_caixa_texto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="1dp"
                android:layout_marginRight="1dp"
                android:textSize="24sp"
                android:textColor="@android:color/white"
                android:hint=" 97070-7070"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/linear4"
            android:layout_below="@+id/linear3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            android:padding="10dp">
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/password"
                android:textSize="24sp"/>



            <EditText
                android:id="@+id/edit_senha"
                android:background="@drawable/fundo_caixa_texto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@android:color/white"
                android:hint="Digite a sua senha"
                android:inputType="textPassword"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear5"
            android:layout_below="@+id/linear4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_margin="10dp">

            <Button
                android:id="@+id/btn_cadastrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:background="@drawable/fundo_botao"
                android:text="@string/cadastrar"/>

        </LinearLayout>

        <TextView
            android:id="@+id/txt_login"
            android:layout_below="@+id/linear5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/txtLogin"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:onClick="abrirLogin"
            />
    </RelativeLayout>

</RelativeLayout>