<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo_degrade"
    tools:context=".activity.CalculoImcFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp"
            android:gravity="center">
            <TextView
                android:id="@+id/txt_Imc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28sp"
                android:text="@string/txtImc"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                />
            <LinearLayout
                android:layout_margin="8dp"
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/linear1">
                <TextView
                    android:id="@+id/txt_peso"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/txtPeso"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    />
                <EditText
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@android:color/white"
                    android:hint="Digite o seu Peso"
                    android:background="@drawable/fundo_caixa_texto"
                    android:id="@+id/editPeso"/>

            </LinearLayout>
            <LinearLayout
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/linear2">
                <TextView
                    android:id="@+id/txt_Altura"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/txtAltura"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    />
                <EditText
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@android:color/white"
                    android:hint="Digite o sua Altura"
                    android:background="@drawable/fundo_caixa_texto"
                    android:id="@+id/editAltura"/>

            </LinearLayout>
            <LinearLayout
                android:layout_margin="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/linear3">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:background="@drawable/fundo_botao"
                    android:id="@+id/btnCalcularImc"
                    android:textColor="@android:color/white"
                    android:text="CALCULAR"/>

            </LinearLayout>

            <LinearLayout
                android:layout_margin="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/linear4">

                <TextView
                    android:id="@+id/txt_resultImc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    android:textAlignment="center"/>



            </LinearLayout>
            <LinearLayout
                android:layout_margin="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/linear5">

                <TextView
                    android:id="@+id/txt_resultP"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textSize="30sp"
                    android:textAlignment="center"/>



            </LinearLayout>

        </LinearLayout>


    </RelativeLayout>


</FrameLayout>